force-app/main/default/objects/Order/fields/AccountholderTypeBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>AccountholderTypeBeneficiary__c</fullName>
    <label>Tipologia Intestatario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stesso Sottoscrittore</fullName>
            </value>
            <value>
                <fullName>Beneficiario Alternativo</fullName>
            </value>
            <value>
                <fullName>Erede</fullName>
            </value>
            <value>
                <fullName>Pagatore Alternativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>