force-app/main/default/objects/Order/fields/ActivationAddessIsForeign__c.field-meta.xml
<CustomField>
    <fullName>ActivationAddessIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Estero [Attivazione]</label>
    <type>Checkbox</type>
</CustomField>