force-app/main/default/objects/Order/fields/ActivationCityCode__c.field-meta.xml
<CustomField>
    <fullName>ActivationCityCode__c</fullName>
    <label>Codice comune SAP [Attivazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>