force-app/main/default/objects/Order/fields/ActivationMode__c.field-meta.xml
<CustomField>
    <fullName>ActivationMode__c</fullName>
    <label>Modalita Attivazione</label>
    <length>5</length>
    <type>Text</type>
</CustomField>