force-app/main/default/objects/Order/fields/ActivationPlace__c.field-meta.xml
<CustomField>
    <fullName>ActivationPlace__c</fullName>
    <label>Località [Attivazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>