force-app/main/default/objects/Order/fields/ActivationStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>ActivationStreetNumber__c</fullName>
    <label>Civico [Attivazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>