force-app/main/default/objects/Order/fields/ActivityQualityToBeCanceled__c.field-meta.xml
<CustomField>
    <fullName>ActivityQualityToBeCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo di tracciamento per identificare i Order soggetto a quality call che devono essere annullate</description>
    <label>Quality da Annullare</label>
    <type>Checkbox</type>
</CustomField>