force-app/main/default/objects/Order/fields/AdditionalAttachments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAttachments__c</fullName>
    <label>Allegati aggiuntivi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>