force-app/main/default/objects/Order/fields/AdministrativeBurden__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeBurden__c</fullName>
    <label>Onere Amministrativo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>