force-app/main/default/objects/Order/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agenzia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>