force-app/main/default/objects/Order/fields/AggregateBilling__c.field-meta.xml
<CustomField>
    <fullName>AggregateBilling__c</fullName>
    <label>Fatturazione aggregata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>