force-app/main/default/objects/Order/fields/AllowSwitchInDummy__c.field-meta.xml
<CustomField>
    <fullName>AllowSwitchInDummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenti SwitchIn Fittizio</label>
    <type>Checkbox</type>
</CustomField>