force-app/main/default/objects/Order/fields/AmendmentAllowed__c.field-meta.xml
<CustomField>
    <fullName>AmendmentAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenti Amendment</label>
    <type>Checkbox</type>
</CustomField>