force-app/main/default/objects/Order/fields/AnnualConsumption__c.field-meta.xml
<CustomField>
    <fullName>AnnualConsumption__c</fullName>
    <label>Consumi Anno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>