force-app/main/default/objects/Order/fields/AnnullaPrestazioneEnabled__c.field-meta.xml
<CustomField>
    <fullName>AnnullaPrestazioneEnabled__c</fullName>
    <formula>AND(
	NOT(ISPICKVAL(Phase__c, &apos;Ammissibilità KO&apos;)),
	NOT(ISPICKVAL(Phase__c, &apos;Esito KO da DL&apos;)),
	NOT(ISPICKVAL(Phase__c, &apos;Esito KO da SII&apos;)),
	NOT(ISPICKVAL(Phase__c, &apos;Amm. Precheck KO SII&apos;)),
	NOT(NotCancellable__c),
	NOT(ISPICKVAL(Status, &apos;Activated&apos;)),
	NOT(ISPICKVAL(Status, &apos;Annullato&apos;)),
	OR(
		NOT(FlyingRequest__c),
		AND(
			FlyingRequest__c,
			$Permission.HDT_CP_AnnullamentoPraticheInVolo
		)
	),
	OR(
		NOT(isTransition__c),
		AND(
			isTransition__c,
			OR(
				ISPICKVAL(Phase__c, &apos;Esportazione VS Siebel&apos;),
				ISPICKVAL(Phase__c, &apos;Caricamento Siebel KO&apos;)
			)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annulla Prestazione Enabled</label>
    <type>Checkbox</type>
</CustomField>