force-app/main/default/objects/Order/fields/AreaManager__c.field-meta.xml
<CustomField>
    <fullName>AreaManager__c</fullName>
    <label>Area Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>