force-app/main/default/objects/Order/fields/AtecoCode__c.field-meta.xml
<CustomField>
    <fullName>AtecoCode__c</fullName>
    <description>combinazione alfanumerica che identifica una ATtività ECOnomica</description>
    <label>Codice Comune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>