force-app/main/default/objects/Order/fields/ATO__c.field-meta.xml
<CustomField>
    <fullName>ATO__c</fullName>
    <label>ATO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>