force-app/main/default/objects/Order/fields/AttributesCatalogDesc__c.field-meta.xml
<CustomField>
    <fullName>AttributesCatalogDesc__c</fullName>
    <label>Descrizione Catalogo Attributi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>