force-app/main/default/objects/Order/fields/AutorizationVolturaThirdTrader__c.field-meta.xml
<CustomField>
    <fullName>AutorizationVolturaThirdTrader__c</fullName>
    <label>Modulo Autorizzazione Voltura c/o VT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>