force-app/main/default/objects/Order/fields/BankAccountSignatoryFiscalCode__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryFiscalCode__c</fullName>
    <label>Codice fiscale intestatario c/c</label>
    <length>16</length>
    <type>Text</type>
</CustomField>