force-app/main/default/objects/Order/fields/BankAccountSignatoryLastName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountSignatoryLastName__c</fullName>
    <description>Cognome intestatario c/c</description>
    <label>Cognome intestatario c/c</label>
    <length>60</length>
    <type>Text</type>
</CustomField>