force-app/main/default/objects/Order/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>Comune [Fatturazione]</label>
    <length>40</length>
    <type>Text</type>
</CustomField>