force-app/main/default/objects/Order/fields/BillingCityCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCityCode__c</fullName>
    <label>Codice ISTAT [Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>