force-app/main/default/objects/Order/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>Stato [Fatturazione]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>