force-app/main/default/objects/Order/fields/BillingPlace__c.field-meta.xml
<CustomField>
    <fullName>BillingPlace__c</fullName>
    <label>Località [Fatturazione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>