force-app/main/default/objects/Order/fields/BillingPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPlaceCode__c</fullName>
    <label>Codice Località [Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>