force-app/main/default/objects/Order/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>Cap[Fatturazione]</label>
    <length>5</length>
    <type>Text</type>
</CustomField>