force-app/main/default/objects/Order/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profilo di fatturazione</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>