force-app/main/default/objects/Order/fields/BillingProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingProvince__c</fullName>
    <label>Provincia [Fatturazione]</label>
    <length>80</length>
    <type>Text</type>
</CustomField>