force-app/main/default/objects/Order/fields/BillingStreetName__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetName__c</fullName>
    <label>Nome Via [Fatturazione]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>