force-app/main/default/objects/Order/fields/BillingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumber__c</fullName>
    <label>Civico [Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>