force-app/main/default/objects/Order/fields/BillingStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumberExtension__c</fullName>
    <label>Estensione Civico [Fatturazione]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>