force-app/main/default/objects/Order/fields/BillingStreetToponym__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetToponym__c</fullName>
    <label>Toponimo [Fatturazione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>