force-app/main/default/objects/Order/fields/BillSendMode__c.field-meta.xml
<CustomField>
    <fullName>BillSendMode__c</fullName>
    <label>Metodo di recapito bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMethod</valueSetName>
    </valueSet>
</CustomField>