force-app/main/default/objects/Order/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Data di nascita</label>
    <type>Date</type>
</CustomField>