force-app/main/default/objects/Order/fields/BlockOnComputation__c.field-meta.xml
<CustomField>
    <fullName>BlockOnComputation__c</fullName>
    <label>Blocca al calcolo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>