force-app/main/default/objects/Order/fields/BonusData__c.field-meta.xml
<CustomField>
    <fullName>BonusData__c</fullName>
    <label>Info Bonus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>