force-app/main/default/objects/Order/fields/BonusDeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>BonusDeliveryMode__c</fullName>
    <label>Modalità Erogazione Bonus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonus in continuita</fullName>
            </value>
            <value>
                <fullName>Bonus su ultima fattura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>