force-app/main/default/objects/Order/fields/BPSAPModel__c.field-meta.xml
<CustomField>
    <fullName>BPSAPModel__c</fullName>
    <label>Modello BP SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>