force-app/main/default/objects/Order/fields/BrandLogo__c.field-meta.xml
<CustomField>
    <fullName>BrandLogo__c</fullName>
    <label>Brand Logo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>