force-app/main/default/objects/Order/fields/Caliber__c.field-meta.xml
<CustomField>
    <fullName>Caliber__c</fullName>
    <label>Classe contatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Caliber</valueSetName>
    </valueSet>
</CustomField>