force-app/main/default/objects/Order/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Nome Campagna</label>
    <length>100</length>
    <type>Text</type>
</CustomField>