force-app/main/default/objects/Order/fields/CancellationHerokuPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>CancellationHerokuPracticeCode__c</fullName>
    <label>Annullamento/Ripensamento - Prat. Heroku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>