force-app/main/default/objects/Order/fields/CancellationNote__c.field-meta.xml
<CustomField>
    <fullName>CancellationNote__c</fullName>
    <description>Note Anullamento</description>
    <label>Note Annullamento/Ripensamento</label>
    <type>TextArea</type>
</CustomField>