force-app/main/default/objects/Order/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Causale Annullamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CancellationReason</valueSetName>
    </valueSet>
</CustomField>