force-app/main/default/objects/Order/fields/CancellationReasonCode__c.field-meta.xml
<CustomField>
    <fullName>CancellationReasonCode__c</fullName>
    <description>Codice Causale Annullamento</description>
    <label>Codice Causale Annullamento/Ripensamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>