force-app/main/default/objects/Order/fields/CancellationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestDate__c</fullName>
    <description>Data richiesta annullamento</description>
    <label>Data Richiesta Annullamento/Ripensamento</label>
    <type>Date</type>
</CustomField>