force-app/main/default/objects/Order/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <description>Catalog</description>
    <label>Catalogo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>