force-app/main/default/objects/Order/fields/ChamberCommerceRegistration__c.field-meta.xml
<CustomField>
    <fullName>ChamberCommerceRegistration__c</fullName>
    <label>Visura camerale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>