force-app/main/default/objects/Order/fields/ChangeStatusDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeStatusDate__c</fullName>
    <description>Campo necessario per l&apos;attività Iva e accise al fine di calcolare il tempo intercorso tra l’invio della one shot o contatto cliente e rientro documentazione da parte del cliente.</description>
    <label>Data Cambio Stato</label>
    <type>Date</type>
</CustomField>