force-app/main/default/objects/Order/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canale di Vendita</label>
    <length>64</length>
    <type>Text</type>
</CustomField>