force-app/main/default/objects/Order/fields/CheckPodPdrResults__c.field-meta.xml
<CustomField>
    <fullName>CheckPodPdrResults__c</fullName>
    <label>Esito Check POD/PdR contendibile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>