force-app/main/default/objects/Order/fields/CIAccoutn__c.field-meta.xml
<CustomField>
    <fullName>CIAccoutn__c</fullName>
    <label>Carta d&apos;identità Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>