force-app/main/default/objects/Order/fields/CIG__c.field-meta.xml
<CustomField>
    <fullName>CIG__c</fullName>
    <label>CIG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>