force-app/main/default/objects/Order/fields/CILegalRepresentative__c.field-meta.xml
<CustomField>
    <fullName>CILegalRepresentative__c</fullName>
    <label>Carta d&apos;identità Rap. Legale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>