force-app/main/default/objects/Order/fields/ClientCategoryFormula__c.field-meta.xml
<CustomField>
    <fullName>ClientCategoryFormula__c</fullName>
    <formula>TEXT(Account.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria Cliente</label>
    <type>Text</type>
</CustomField>