force-app/main/default/objects/Order/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attivazioni</fullName>
                <default>true</default>
                <label>Attivazioni</label>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>