force-app/main/default/objects/Order/fields/Cohabitation__c.field-meta.xml
<CustomField>
    <fullName>Cohabitation__c</fullName>
    <label>Coabitazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YN</valueSetName>
    </valueSet>
</CustomField>