force-app/main/default/objects/Order/fields/ComfortCallDaysDue__c.field-meta.xml
<CustomField>
    <fullName>ComfortCallDaysDue__c</fullName>
    <description>Campo di tracciamento per identificare la data quando l’order e stato segnato per la comfort call</description>
    <label>Giorni a scadere comfort call</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>