force-app/main/default/objects/Order/fields/CommentForDL__c.field-meta.xml
<CustomField>
    <fullName>CommentForDL__c</fullName>
    <label>Note per il DL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>