force-app/main/default/objects/Order/fields/CommercialId__c.field-meta.xml
<CustomField>
    <fullName>CommercialId__c</fullName>
    <description>Id Commerciale</description>
    <label>Venduto Da</label>
    <length>100</length>
    <type>Text</type>
</CustomField>