force-app/main/default/objects/Order/fields/CommercialProduct__c.field-meta.xml
<CustomField>
    <fullName>CommercialProduct__c</fullName>
    <label>Prodotto Commerciale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>