force-app/main/default/objects/Order/fields/CommercialProductCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialProductCode__c</fullName>
    <label>Codice Prodotto Commerciale</label>
    <length>80</length>
    <type>Text</type>
</CustomField>