force-app/main/default/objects/Order/fields/CommercialProductLink__c.field-meta.xml
<CustomField>
    <fullName>CommercialProductLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link Prodotto Commerciale</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ordini</relationshipLabel>
    <relationshipName>Ordini</relationshipName>
    <type>Lookup</type>
</CustomField>