force-app/main/default/objects/Order/fields/CommissioningCampaign__c.field-meta.xml
<CustomField>
    <fullName>CommissioningCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campagna Commissioning</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Orders (Campagna Commissioning)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>