force-app/main/default/objects/Order/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>campo utilizzato per salvare il servizio presente in siebel per le RDS migrate</description>
    <label>Servizio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>