force-app/main/default/objects/Order/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <formula>TEXT(Account.CompanyOwner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Owner</label>
    <type>Text</type>
</CustomField>