force-app/main/default/objects/Order/fields/ConfirmCustomerContract__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCustomerContract__c</fullName>
    <label>Conferma contratto cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>