force-app/main/default/objects/Order/fields/ConnectionMandate__c.field-meta.xml
<CustomField>
    <fullName>ConnectionMandate__c</fullName>
    <label>Mandato di Connessione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>