force-app/main/default/objects/Order/fields/ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>ConnectionType__c</fullName>
    <label>Tipo di connessione</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ConnectionType</valueSetName>
    </valueSet>
</CustomField>