force-app/main/default/objects/Order/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contatto Primario</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Contatto Primario)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>