force-app/main/default/objects/Order/fields/ContractAccountCode__c.field-meta.xml
<CustomField>
    <fullName>ContractAccountCode__c</fullName>
    <label>Codice CA SAP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>