force-app/main/default/objects/Order/fields/ContractExpenses__c.field-meta.xml
<CustomField>
    <fullName>ContractExpenses__c</fullName>
    <label>Addebito Spese Contrattuali</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nessuno Sconto</fullName>
                <default>true</default>
                <label>Nessuno Sconto</label>
            </value>
            <value>
                <fullName>Nessun Addebito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>