force-app/main/default/objects/Order/fields/ContractReference__c.field-meta.xml
<CustomField>
    <fullName>ContractReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>campo utilizzato per referenziare un contratto attivo durante la vendita singola di un VAS</description>
    <label>Contratto di riferimento</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>