force-app/main/default/objects/Order/fields/ContractSigned__c.field-meta.xml
<CustomField>
    <fullName>ContractSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag che indica se esiste gia il contratto firmato</description>
    <label>Contratto Firmato</label>
    <type>Checkbox</type>
</CustomField>