force-app/main/default/objects/Order/fields/ConventionAssociation__c.field-meta.xml
<CustomField>
    <fullName>ConventionAssociation__c</fullName>
    <label>Convenzione/Associazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AADPG-Associazione Amici di Pi</fullName>
            </value>
            <value>
                <fullName>ACTRE-ASS PROV COMM TURIS SERV</fullName>
            </value>
            <value>
                <fullName>ALT10-BONUS FEDELTÀ 10%</fullName>
            </value>
            <value>
                <fullName>ALTM5-BONUS FEDELTÀ 5%</fullName>
            </value>
            <value>
                <fullName>APIAM-API INDUSTRIA ANCONA MAC</fullName>
            </value>
            <value>
                <fullName>APIB2-API BOLOGNA  II</fullName>
            </value>
            <value>
                <fullName>APIB3-API BOLOGNA DUAL II</fullName>
            </value>
            <value>
                <fullName>ARCBI - ARCI COMITATO DI BIELL</fullName>
            </value>
            <value>
                <fullName>ARCBO - Arci Bologna</fullName>
            </value>
            <value>
                <fullName>ARCFE-ARCI FERRARA</fullName>
            </value>
            <value>
                <fullName>ARCRM - ARCI ROMA</fullName>
            </value>
            <value>
                <fullName>ARCTE - ARCI TERAMO</fullName>
            </value>
            <value>
                <fullName>ARCVB- ARCI VERBANIA</fullName>
            </value>
            <value>
                <fullName>ARCVI - Arci Viterbo</fullName>
            </value>
            <value>
                <fullName>ARNAC-Arci Nazionale Accoglien</fullName>
            </value>
            <value>
                <fullName>ARNSU-Arci Nazionale Start Up</fullName>
            </value>
            <value>
                <fullName>ASHCM-Associazione Marche</fullName>
            </value>
            <value>
                <fullName>ASSFA-ASS. SIND. FARMACIE AR</fullName>
            </value>
            <value>
                <fullName>BENEN-Benaco energia spa</fullName>
            </value>
            <value>
                <fullName>BPER</fullName>
            </value>
            <value>
                <fullName>CABMT-Conf Ass Bo Metrop</fullName>
            </value>
            <value>
                <fullName>CFAPE-Confartigianato Pescara</fullName>
            </value>
            <value>
                <fullName>CFIRA-CONFINDUSTRIA RAVENNA</fullName>
            </value>
            <value>
                <fullName>CNAFR CNA Fermo</fullName>
            </value>
            <value>
                <fullName>CNFVG-CNA REGIONALE FVG</fullName>
            </value>
            <value>
                <fullName>CONAQ-Confcommercio Aquila</fullName>
            </value>
            <value>
                <fullName>CONFI-CONFIMPRESA</fullName>
            </value>
            <value>
                <fullName>CONMO-CONFARTIGIANATO MODENA</fullName>
            </value>
            <value>
                <fullName>CONTE-CONFCOMMERCIO TERAMO</fullName>
            </value>
            <value>
                <fullName>CSITA-CENTRO SPORTIVO ITALIANO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>