force-app/main/default/objects/Order/fields/CreateContractAccount__c.field-meta.xml
<CustomField>
    <fullName>CreateContractAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crea BP CA</label>
    <type>Checkbox</type>
</CustomField>