force-app/main/default/objects/Order/fields/CreditAcquire__c.field-meta.xml
<CustomField>
    <fullName>CreditAcquire__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Acquisto Credito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>