force-app/main/default/objects/Order/fields/CreditCheckDescription__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckDescription__c</fullName>
    <label>Descrizione Esito Credit Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>