force-app/main/default/objects/Order/fields/CreditCheckInProgress__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check in corso</label>
    <type>Checkbox</type>
</CustomField>