force-app/main/default/objects/Order/fields/CUP__c.field-meta.xml
<CustomField>
    <fullName>CUP__c</fullName>
    <label>CUP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>