force-app/main/default/objects/Order/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <label>Codice Cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>