force-app/main/default/objects/Order/fields/CustomerFiscalCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerFiscalCode__c</fullName>
    <label>CF Cliente</label>
    <length>16</length>
    <type>Text</type>
</CustomField>