force-app/main/default/objects/Order/fields/CustomerLastName__c.field-meta.xml
<CustomField>
    <fullName>CustomerLastName__c</fullName>
    <label>Cognome Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>