force-app/main/default/objects/Order/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>Nome Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>