force-app/main/default/objects/Order/fields/CustomerVATNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerVATNumber__c</fullName>
    <label>P.IVA Cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>